cmake_minimum_required(VERSION 3.1)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(playground)
add_subdirectory(std_algorithm)
add_subdirectory(regex_pattern)
add_subdirectory(smart_ptr)
add_subdirectory(template)
add_subdirectory(multi_threads)
add_subdirectory(io)

add_subdirectory(exception)
